vcluster_versioned_docs/version-0.27.0/configure/tenancy-model.mdx
---
title: Configuring a Tenancy Model
sidebar_label: Configuring a Tenancy Model
sidebar_position: 2
sidebar_class_name: host-nodes private-nodes standalone
---


vCluster supports multiple tenancy models and configuring the tenancy models starts how you select the worker node pool. 

## Worker node pool

You decide what infrastructure is used for the vCluster's worker node pool. 

:::warning
Deciding which type of nodes you want to use for your vCluster
must be determined upon vCluster creation. There is no migration/upgrade between the different worker node pool types.
:::

### Host nodes

The following tenancy models use worker nodes from the host cluster that the vCluster is deployed on. 

* **Shared Nodes** - (Default) All worker nodes of the host cluster can be used by the virtual cluster. All resources are synced to the single namespace that the vCluster is deployed on. 
* **[Dedicated Nodes](./vcluster-yaml/sync/from-host/nodes#selecting-a-set-of-nodes)** - A set of worker nodes of the host cluster are selected based on node labels. That set of worker nodes can be used by the virtual cluster. By default, all resources are synced to the single namespace that the vCluster is deployed on. 

#### Resource syncing

After selecting which set of worker nodes to use from the host cluster, you decide how you want resources synced from the virtual cluster to the host cluster. 

* **Single Namespace** - (Default) - All resources are synced to a single namespace, specifically the namespace that the virtual cluster control plane pod is deployed in. Names of the resources are translated to new names on the host cluster to eliminate any naming conflicts.
* **[Namespace Syncing](./vcluster-yaml/sync/to-host/advanced/namespaces)** - Advanced - Enable syncing namespaces between the virtual cluster and host cluster allows the specified namespaces and its resources to be synced from the virtual cluster onto the host cluster. There is no 
translation of resources, so if you enable this feature, you must be aware of other virtual clusters deploying onto the host cluster to avoid naming conflicts. 

### Private nodes

The following tenancy models use individual nodes that are joined one by one to the vCluster. Each node can only be used by one virtual cluster. One benefit of using private nodes is that vCluster can automatically manage the lifecycle of the worker nodes.

* **[Private Nodes](./vcluster-yaml/private-nodes)** - Enable only adding nodes to the virtual cluster. 

## Worker node comparison

The following table outlines the differences between using host nodes and private nodes:

| Feature                                    |  Host Nodes           |  Private Nodes                 |
|--------------------------------------------|------------------------------|------------------------------|
| Isolated control plane                     | Yes                          | Yes                          |
| Ability to install custom CNI              | No                          | Yes                           |
| Ability to install custom CSI drivers      | No                          | Yes                           |
| Isolated network                           | No                          | Yes                           |
| Ability to re-use host controllers         | Yes                           | No                          |
| Ability to view vCluster resources in the host cluster | Yes              | No                          |
