vcluster_versioned_docs/version-0.33.0/configure/tenancy-model.mdx
---
title: Configuring a Tenancy Model
sidebar_label: Configuring a Tenancy Model
sidebar_position: 2
sidebar_class_name: host-nodes private-nodes standalone
---


vCluster supports multiple tenancy models and configuring the tenancy models starts how you select the worker node pool. 

:::warning
Deciding how to deploy your control plane and worker nodes 
must be determined upon vCluster creation. There is no migration/upgrade between the different models.
:::

<!-- vale off -->
## Shared host nodes vs. private nodes vs. standalone vs. Docker
<!-- vale on -->

Understanding the different deployment models helps you choose the right approach for your use case:

- **Shared Host Nodes**: vCluster control plane and worker nodes run on a host Kubernetes cluster, sharing infrastructure with other virtual clusters.
- **Private Nodes**: vCluster control runs on a host Kubernetes cluster, but worker nodes are on individual nodes. 
- **Standalone**: Complete independence with no host cluster - both control plane and worker nodes run on dedicated infrastructure.
- **Docker (vind)**: vCluster runs entirely in Docker containers, providing a lightweight standalone environment without requiring a host Kubernetes cluster.

## Control plane

The first decision that needs to be made is what infrastructure is used for the vCluster's control plane. The control plane can be deployed as a:

* **Container** - (Default) The control plane is deployed as containers on a host cluster.
* **[Binary](./vcluster-yaml/control-plane/components/standalone.mdx)** - The control plane is deployed as a binary on individual nodes.
* **[Docker Container](./vcluster-yaml/experimental/docker.mdx)** - The control plane runs in Docker containers without requiring a host Kubernetes cluster.

## Worker node pool

When the control plane is deployed as a container, you can decide what infrastructure is used for the vCluster's worker node pool.

When the control plane is deployed as a binary, the worker nodes can only be [private nodes](#private-nodes).

### Host nodes

The following tenancy models use worker nodes from the host cluster that the vCluster is deployed on. 

* **Shared Nodes** - (Default) All worker nodes of the host cluster can be used by the virtual cluster. All resources are synced to the single namespace that the vCluster is deployed on. 
* **[Dedicated Nodes](./vcluster-yaml/sync/from-host/nodes.mdx#selecting-a-set-of-nodes)** - A set of worker nodes of the host cluster are selected based on node labels. That set of worker nodes can be used by the virtual cluster. By default, all resources are synced to the single namespace that the vCluster is deployed on. 

#### Resource syncing

After selecting which set of worker nodes to use from the host cluster, you decide how you want resources synced from the virtual cluster to the host cluster. 

* **Single Namespace** - (Default) - All resources are synced to a single namespace, specifically the namespace that the virtual cluster control plane pod is deployed in. Names of the resources are translated to new names on the host cluster to eliminate any naming conflicts.
* **[Namespace Syncing](./vcluster-yaml/sync/to-host/advanced/namespaces.mdx)** - Advanced - Enable syncing namespaces between the virtual cluster and host cluster allows the specified namespaces and its resources to be synced from the virtual cluster onto the host cluster. There is no 
translation of resources, so if you enable this feature, you must be aware of other virtual clusters deploying onto the host cluster to avoid naming conflicts. 

### Virtual nodes

The following tenancy model uses virtual nodes which are deployed onto one of the worker nodes from the host cluster that the vCluster 
is deployed on. 

* **[Virtual Nodes](https://www.vnode.com/docs/)** - A set of virtual nodes deployed on a worker node of the host cluster.

### Private nodes

The following tenancy models use individual nodes that are joined to the vCluster. Each node can only be used by one virtual cluster. One benefit of using private nodes is that vCluster can automatically manage the lifecycle of the worker nodes. 

- **[Private Nodes](./vcluster-yaml/private-nodes/README.mdx)** 
  - **Manually Provisioned** - Nodes are provisioned outside of vCluster and added to the vCluster individually. 
  - **Automatically Provisioned** - Nodes are automatically provisioned and joined by vCluster and vCluster Platform. Node providers are managed inside vCluster Platform.

### Docker containers (vind)

vCluster in Docker (vind) provides a standalone deployment model that runs entirely in Docker containers without requiring a host Kubernetes cluster:

- **[Docker Deployment](./vcluster-yaml/experimental/docker.mdx)** - Both control plane and worker nodes run as Docker containers on the local machine or any Docker-enabled environment. This provides complete isolation and is ideal for development, testing, and CI/CD scenarios.

## Deployment model comparison

The following table outlines the differences between the various deployment models:

| Feature                                    |  Host Nodes           |  Private Nodes        | Docker (vind)        |
|--------------------------------------------|------------------------------|------------------------------|---------------------|
| Isolated control plane                     | Yes                          | Yes                          | Yes                 |
| Ability to install custom CNI              | No                          | Yes                           | Yes                 |
| Ability to install custom CSI drivers      | No                          | Yes                           | Limited             |
| Isolated network                           | No                          | Yes                           | Yes                 |
| Ability to re-use host controllers         | Yes                           | No                          | No                  |
| Ability to view vCluster resources in the host cluster | Yes              | No                          | No                 |
| Ability to automatically provision and add nodes based on resource requirements | No | Yes | Limited |
| Requires host Kubernetes cluster          | Yes                          | Yes                          | No                  |
| Suitable for local development            | Limited                      | No                           | Yes                 |
| Suitable for CI/CD                        | Yes                          | Limited                      | Yes                 |
| Resource overhead                          | Low                          | High                         | Low                 |

